workspaces/frontend/manifests/kustomize/options/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - kubeflow/kubeflow-gateway
  http:
    - match:
        - uri:
            prefix: /workspaces
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nb-frontend.workspace-controller-system.svc.cluster.local
            port:
              number: 8080
